--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "core-js": "^2.0.0",
     "node-sass": "^4.5.3",
     "normalize.css": "^4.0.0",
